--- a/src/assets/img/emoji.css
+++ b/src/assets/img/emoji.css
@@ -1,10 +1,9 @@
 
 .emoji {
-    float: left;
-    list-style: none;
-    margin-right: .5em;
+    display: inline-block;
     width: 22px;
     height: 22px;
+    vertical-align: -.6ex;
     background: transparent url(graphics/sprite_5a67d9d6c6ad4de80606e14e65624256@2x.png) 0 0 no-repeat;
     background-size: 28064px 22px
 }
